# corics-quest

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  build.rs  index.html  prepare_txt.awk  task
assets/: air.aseprite  air.json  attack.jfxr  base.aseprite  basilisk.aseprite  basilisk.json  bat.aseprite  bat.json  bed.aseprite  bed.json  cancel.jfxr  chest.aseprite  chest.json  chime.jfxr  cobra.aseprite  cobra.json  confirm.jfxr  coric.aseprite  coric.json  cursor.jfxr  dog.aseprite  dog.json  dragonfly.aseprite  dragonfly.json  ducille.aseprite  ducille.json  earth-small.aseprite  earth-small.json  earth.aseprite  earth.json  edges.aseprite  fang-frog.aseprite  fang-frog.json  fire-small.aseprite  fire-small.json  fire.aseprite  fire.json  ghost.aseprite  ghost.json  golem.aseprite  (+57 more)
play/: gl.js  index.html  quad-storage.js  sapp_jsutils.js
src/: actor.rs  aseprite.rs  async_utils.rs  audio.rs  contexts.rs  direction.rs  enemy.rs  fade.rs  input.rs  ldtk.rs  levels.rs  main.rs  meter.rs  progress.rs  random.rs  resources.rs  saved_options.rs  script.rs  sprite.rs  text.rs  window.rs
src/modes/: battle.rs  credits.rs  debug_menu.rs  ending.rs  intro.rs  main_menu.rs  mod.rs  options.rs  text_box.rs  title.rs  walk_around.rs  yes_no_prompt.rs
src/progress/: mod.rs  v1.rs
src/shaders/: layer_shader.rs  mod.rs  quad_shader.rs  screen_shader.rs
