[package]
name = "corics-quest"
version = "0.1.0"
edition = "2021"
authors = ["Tung Nguyen"]
description = "A small, complete 2D fantasy-themed console-style RPG, made with Rust and Miniquad"
license = "MIT"
keywords = ["rpg", "2d", "game"]
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniquad = "0.4.2"
miniserde = "0.1.36"
png = "0.17.11"
quad-snd = "0.2.8"
quad-storage = "0.1.3"

[build-dependencies]
winresource = { version = "0.1.17", default-features = false }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
strip = "debuginfo"
